# PRISM-AI

./: .gitignore  .pre-commit-config.yaml  ACTUAL_STATUS_NOW.md  ADAPTIVE_DEMO_GUIDE.md  ADVANCED_TE_ENHANCEMENTS.md  AGGRESSIVE_OPTIMIZATION_FINDINGS.md  AGGRESSIVE_OPTIMIZATION_STRATEGY.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  BENCHMARK_FIXED.md  BENCHMARK_GUIDE.md  BENCHMARK_ISSUES.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_2025-10-06.md  CODE_AUDIT_REPORT.md  COMPETITORS.md  COMPLETE_SYSTEM_AUDIT.md  COMPLETE_SYSTEM_STATUS.md  COMPLETE_TRUTH_WHAT_YOU_DONT_KNOW.md  CONTAINER_VALIDATION.md  COST_ANALYSIS_REPORT.md  CRITICAL_BUG_ANALYSIS.md  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_8xH200_NOW.md  DEPLOY_NOW.md  DIMACS_RESULTS.md  DISASTER_RECOVERY.md  Dockerfile.8gpu  Dockerfile.gpu  Dockerfile.h100-benchmark  Dockerfile.tsp-h100  Dockerfile.tsp-runtime  Dockerfile.world-record  Dockerfile.world-record-build  EIGENVALUE_SOLVER_IMPLEMENTATION.md  FINAL_DEPLOYMENT.md  FINAL_H100_STATUS.md  FINAL_HONEST_ASSESSMENT.md  FINAL_VALIDATION_REPORT_CORRECTED.md  (+89 more)
.ai-context/: amendments.yaml  current-task.md  development-rules.md  project-manifest.yaml  rust-setup-required.md  session-init.md
.cargo/: config.toml
.claude/: settings.local.json
DARPA_Narcissus/: PROPOSAL_STRATEGY.md  README.md  SOLICITATION_TEXT.md
architecture/: README.md  investor_demo_infrastructure.md  microservices_architecture.md  production_readiness_guide.md  scalability_implementation.md
benches/: performance_benchmarks.rs
benchmarks/: README.md  test_bipartite.col  test_cycle.col  test_small.col  test_small_10.col
config/: ingestion.toml
cuda/: coupling_kernels.cu  graph_coloring.cu  neuromorphic_kernels.cu  parallel_coloring.cu  quantum_kernels.cu  thermodynamic_evolution.cu  transfer_entropy.cu  tsp_solver.cu
demos/graph_coloring/: Cargo.toml  HONEST_ASSESSMENT.md  README.md  dashboard_design.md  download_instances.sh
demos/graph_coloring/src/: main.rs  main_fixed.rs
demos/graph_coloring/web/: index.html
docker/: entrypoint.sh  run_benchmarks.sh
docs/: ALGORITHM_COMPARISON_LKH.md  API_REFERENCE.md  BENCHMARK_ANALYSIS.md  GPU_FINAL_STATUS.md  GPU_FIX_SOLUTION.md  GPU_IMPLEMENTATION_STATUS.md  GPU_KERNEL_FIX_RESULTS.md  HARDWARE_REQUIREMENTS.md  MODERN_HARDWARE_COMPARISON.md  NEUROMORPHIC_HARDWARE_COMPARISON.md  TSP_H100_DOCKER_GUIDE.md  TSP_PERFORMANCE_COMPARISON.md  TSP_SETUP_SUMMARY.md  gpu_policy_eval_design.md  phase2_complete_performance_report.md  phase2_gpu_acceleration_summary.md  phase2_hard_problem_improvements.md  phase3_task31_implementation.md  phase3_task32_status.md  phase4_progress_summary.md  phase4_task41_status.md  phase4_task42_partial_status.md  phase4_task42_status.md
examples/: adaptive_world_record_demo.rs  benchmark_dsjc500_5.rs  benchmark_kron_g500.rs  benchmark_small.rs  benchmark_suite.rs  classical_baselines.rs  cma_gpu_demo.rs  comprehensive_benchmark.rs  debug_baselines.rs  debug_coloring.rs  debug_gpu_coloring.rs  debug_independence_issue.rs  debug_transfer_entropy.rs  dimacs_benchmark_runner.rs  dimacs_benchmark_runner_gpu.rs  dimacs_clean_architecture.rs  drpp_prct_demonstration.rs  drpp_theory_validation.rs  error_handling_demo.rs  financial_validation.rs  full_platform_benchmark.rs  full_platform_coloring_benchmark.rs  gpu_performance_demo.rs  gpu_quantum_benchmark.rs  gpu_thermodynamic_benchmark.rs  gpu_validation_dsjc_citeseer.rs  honest_gpu_demo.rs  honest_tsp_benchmark.rs  large_graph_test.rs  large_scale_tsp_demo.rs  lkh_comparison_benchmark.rs  lkh_large_scale_comparison.rs  performance_optimization_demo.rs  phase2_complete_demo.rs  phase2_gpu_benchmark.rs  phase2_graph_coloring_validation.rs  phase2_hard_solver.rs  phase2_improved_test.rs  phase2_integration_test.rs  phase2_profile.rs  (+47 more)
hft-demo/: .gitignore  Cargo.toml  README.md
hft-demo/benches/: market_data_benchmarks.rs
hft-demo/data/: sample_aapl_1hour.csv
hft-demo/src/: lib.rs
hft-demo/src/market_data/: features.rs  loader.rs  mod.rs  simulator.rs
hft-demo/tests/: integration_tests.rs
legacy_docs/: COMPLETE_SYSTEM_STATUS.md  README.md
production-deployment/: README.md  cloud-deployment-guides.md  cost-optimization-analysis.md  enterprise-scale-architecture.md  gpu-monitoring-observability.md  gpu-production-architecture.md  hft-ultra-low-latency-deployment.md  kubernetes-gpu-orchestration.md  multi-gpu-scaling-strategy.md
scripts/: archive_legacy_docs.sh  build_and_push_tsp_docker.sh  check_constitution_compliance.sh  compliance-check.sh  deploy_gpu.sh  download_dimacs_benchmarks.sh  download_tsplib.sh  install-test-deps.sh  install_cuda_toolkit.sh  install_mlir.sh  load_context.sh  setup_lkh.sh  setup_python_validation.sh
src/: cuda_bindings.rs  gpu_coloring.rs  lib.rs
src/adapters/: Cargo.toml
src/adapters/src/: coupling_adapter.rs  neuromorphic_adapter.rs  quantum_adapter.rs
src/csf-mlir/: Cargo.toml
src/csf-mlir/src/: dialects.rs  lib.rs  passes.rs  runtime.rs  types.rs
src/csf-mlir/src/passes/: deterministic_reduce.rs  lower_dd_arith.rs
src/csf-quantum/: Cargo.toml
src/csf-quantum/src/: algorithms.rs  circuits.rs  error_correction.rs  gates.rs  lib.rs  optimization.rs  simulation.rs  state.rs
src/neuromorphic/: Cargo.toml
src/neuromorphic/src/: cuda_kernels.rs  gpu_memory.rs  gpu_optimization.rs  gpu_reservoir.rs  gpu_simulation.rs  lib.rs  pattern_detector.rs  reservoir.rs
statistical_validation/: DELIVERABLES_SUMMARY.md  README.md  main_validation.py
system-runner/: Cargo.toml
system-runner/src/: main.rs
tests/: generate_validation_data.rs  gpu_validation.rs  mathematical_proof_tests.rs  phase6_integration.rs  phase6_production_validation.rs  quantum_gpu_correctness.rs  resilience_tests.rs  run_dimacs_dataset.rs  test_cma_conformal.rs  test_cma_diffusion.rs  test_cma_gnn.rs  test_cma_gpu_integration.rs  test_cma_neural_quantum.rs  test_cma_pac_bayes.rs  test_cma_pimc.rs  test_cma_zkp.rs  thermodynamic_tests.rs  transfer_entropy_tests.rs
validation/: Cargo.toml  validate_quantum_evolution.py
validation/src/: lib.rs
(+182 files in other folders)
