[package]
name = "neuromorphic-quantum-platform"
version = "0.1.0"
edition = "2021"
authors = ["ARES-51 Research"]
description = "World's first software-based neuromorphic-quantum computing platform"
license = "MIT"
build = "build_cuda.rs"

[workspace]
members = [
    "src/neuromorphic",
    "src/quantum",
    "src/foundation",
]

[features]
default = ["simulation"]
# Real CUDA GPU acceleration (requires NVIDIA drivers + RTX GPU)
cuda = ["neuromorphic-engine/cuda"]
# CPU-based simulation with artificial speedup for testing
simulation = ["neuromorphic-engine/simulation"]

[dependencies]
neuromorphic-engine = { path = "src/neuromorphic", default-features = false, features = ["simulation"] }
quantum-engine = { path = "src/quantum" }
platform-foundation = { path = "src/foundation" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.10"
ndarray = "0.15"
num-complex = "0.4"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[[example]]
name = "platform_demo"
path = "examples/platform_demo.rs"

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[[example]]
name = "financial_validation"
path = "examples/financial_validation.rs"

[[example]]
name = "working_demo"
path = "examples/working_demo.rs"

[[example]]
name = "gpu_performance_demo"
path = "examples/gpu_performance_demo.rs"

[[example]]
name = "performance_optimization_demo"
path = "examples/performance_optimization_demo.rs"

[[example]]
name = "rtx5070_validation_demo"
path = "examples/rtx5070_validation_demo.rs"

[[example]]
name = "test_gpu_detection"
path = "examples/test_gpu_detection.rs"

[[example]]
name = "stdp_learning_demo"
path = "examples/stdp_learning_demo.rs"

[[example]]
name = "prct_demonstration"
path = "examples/prct_demonstration.rs"

[[example]]
name = "streaming_demo"
path = "examples/streaming_demo.rs"

[[example]]
name = "error_handling_demo"
path = "examples/error_handling_demo.rs"

[[example]]
name = "stress_test_demo"
path = "examples/stress_test_demo.rs"

[[example]]
name = "dimacs_benchmark_runner_gpu"
path = "examples/dimacs_benchmark_runner_gpu.rs"

[[example]]
name = "test_gpu_minimal"
path = "examples/test_gpu_minimal.rs"

[[example]]
name = "debug_gpu_coloring"
path = "examples/debug_gpu_coloring.rs"

[[example]]
name = "verify_gpu_usage"
path = "examples/verify_gpu_usage.rs"

[[example]]
name = "test_gpu_tsp"
path = "examples/test_gpu_tsp.rs"

[[example]]
name = "tsp_benchmark_runner_gpu"
path = "examples/tsp_benchmark_runner_gpu.rs"

[[example]]
name = "large_scale_tsp_demo"
path = "examples/large_scale_tsp_demo.rs"

[[example]]
name = "qubo_loihi_benchmark"
path = "examples/qubo_loihi_benchmark.rs"

[[example]]
name = "lkh_comparison_benchmark"
path = "examples/lkh_comparison_benchmark.rs"

[[example]]
name = "lkh_large_scale_comparison"
path = "examples/lkh_large_scale_comparison.rs"

[[example]]
name = "full_platform_benchmark"
path = "examples/full_platform_benchmark.rs"

[[example]]
name = "full_platform_coloring_benchmark"
path = "examples/full_platform_coloring_benchmark.rs"

[lib]
name = "neuromorphic_quantum_platform"
path = "src/lib.rs"