[package]
name = "active-inference-platform"
version = "0.1.0"
edition = "2021"
authors = ["Active Inference Research"]
description = "Scientifically rigorous active inference platform with GPU acceleration"
license = "MIT"
build = "build_cuda.rs"

[workspace]
members = [
    "src/neuromorphic",
    "src/quantum",
    "src/foundation",
    "src/shared-types",
    "src/prct-core",
    "src/adapters",
    "src/mathematics",
    "validation",
]

[features]
default = ["cuda"]
# Real CUDA GPU acceleration (requires NVIDIA drivers + RTX GPU)
cuda = ["neuromorphic-engine/cuda"]
# CPU-based simulation (DEPRECATED - only for testing without GPU)
simulation = ["neuromorphic-engine/simulation"]

[dependencies]
neuromorphic-engine = { path = "src/neuromorphic", default-features = false, features = ["cuda"] }
quantum-engine = { path = "src/quantum" }
platform-foundation = { path = "src/foundation" }
shared-types = { path = "src/shared-types" }
prct-core = { path = "src/prct-core" }
prct-adapters = { path = "src/adapters" }
mathematics = { path = "src/mathematics" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.10"
ndarray = "0.15"
approx = "0.5"
num-complex = "0.4"
nalgebra = "0.32"
rustfft = "6.1"
statrs = "0.16"
kdtree = "0.7"
ordered-float = "3.0"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[[example]]
name = "platform_demo"
path = "examples/platform_demo.rs"

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[[example]]
name = "financial_validation"
path = "examples/financial_validation.rs"

[[example]]
name = "working_demo"
path = "examples/working_demo.rs"

[[example]]
name = "gpu_performance_demo"
path = "examples/gpu_performance_demo.rs"

[[example]]
name = "performance_optimization_demo"
path = "examples/performance_optimization_demo.rs"

[[example]]
name = "rtx5070_validation_demo"
path = "examples/rtx5070_validation_demo.rs"

[[example]]
name = "test_gpu_detection"
path = "examples/test_gpu_detection.rs"

[[example]]
name = "stdp_learning_demo"
path = "examples/stdp_learning_demo.rs"

[[example]]
name = "prct_demonstration"
path = "examples/prct_demonstration.rs"

[[example]]
name = "streaming_demo"
path = "examples/streaming_demo.rs"

[[example]]
name = "error_handling_demo"
path = "examples/error_handling_demo.rs"

[[example]]
name = "stress_test_demo"
path = "examples/stress_test_demo.rs"

[[example]]
name = "dimacs_benchmark_runner_gpu"
path = "examples/dimacs_benchmark_runner_gpu.rs"

[[example]]
name = "test_gpu_minimal"
path = "examples/test_gpu_minimal.rs"

[[example]]
name = "debug_gpu_coloring"
path = "examples/debug_gpu_coloring.rs"

[[example]]
name = "verify_gpu_usage"
path = "examples/verify_gpu_usage.rs"

[[example]]
name = "test_gpu_tsp"
path = "examples/test_gpu_tsp.rs"

[[example]]
name = "tsp_benchmark_runner_gpu"
path = "examples/tsp_benchmark_runner_gpu.rs"

[[example]]
name = "large_scale_tsp_demo"
path = "examples/large_scale_tsp_demo.rs"

[[example]]
name = "qubo_loihi_benchmark"
path = "examples/qubo_loihi_benchmark.rs"

[[example]]
name = "lkh_comparison_benchmark"
path = "examples/lkh_comparison_benchmark.rs"

[[example]]
name = "lkh_large_scale_comparison"
path = "examples/lkh_large_scale_comparison.rs"

[[example]]
name = "full_platform_benchmark"
path = "examples/full_platform_benchmark.rs"

[[example]]
name = "full_platform_coloring_benchmark"
path = "examples/full_platform_coloring_benchmark.rs"

[[example]]
name = "comprehensive_benchmark"
path = "examples/comprehensive_benchmark.rs"

[lib]
name = "active_inference_platform"
path = "src/lib.rs"

[[test]]
name = "transfer_entropy"
path = "tests/transfer_entropy_tests.rs"