[package]
name = "hft-demo"
version = "0.1.0"
edition = "2021"
authors = ["PRISM-AI Team"]
description = "High-Frequency Trading Backtesting Demo with Neuromorphic-Quantum Strategy"
license = "MIT"

[[bin]]
name = "hft-demo-server"
path = "src/bin/server.rs"

[[bin]]
name = "generate-sample-data"
path = "src/bin/generate_sample_data.rs"

[dependencies]
# PRISM-AI core library (will be enabled in Phase 2 for neuromorphic integration)
# prism-ai = { path = "..", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data handling
csv = "1.3"
# polars = { version = "0.35", features = ["lazy", "temporal"], default-features = false }  # Add later if needed
chrono = { version = "0.4", features = ["serde"] }

# Numerical computing
ndarray = { version = "0.15", features = ["serde"], default-features = false }
statrs = "0.16"

# Technical analysis
# ta = "0.5"  # Add later in Task 1.3

# Random number generation
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Web server (for Phase 4)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
tempfile = "3.8"

[[bench]]
name = "market_data_benchmarks"
harness = false

[lib]
name = "hft_demo"
path = "src/lib.rs"
