[package]
name = "prism-system-runner"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism-ai = { path = ".." }
prct-core = { path = "../src/prct-core" }
shared-types = { path = "../src/shared-types" }
ndarray = "0.15"
anyhow = "1.0"
colored = "2.1"
