[package]
name = "prism-graph-coloring"
version = "0.1.0"
edition = "2021"

[dependencies]
prism_ai = { path = "../.." }
tokio = { version = "1.40", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "coloring_benchmarks"
harness = false