[package]
name = "prct-adapters"
version = "0.1.0"
edition = "2021"
authors = ["ARES Team"]
description = "Infrastructure adapters implementing PRCT port interfaces"

[dependencies]
# Domain dependencies (ports we implement)
prct-core = { path = "../prct-core" }
shared-types = { path = "../shared-types" }

# Infrastructure dependencies (engines we wrap)
neuromorphic-engine = { path = "../neuromorphic", default-features = false, features = ["simulation"] }
quantum-engine = { path = "../quantum" }
platform-foundation = { path = "../foundation" }

# Utilities
anyhow = "1.0"
ndarray = "0.15"
num-complex = "0.4"
nalgebra = "0.33"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["sync"] }

[features]
default = ["simulation"]
cuda = ["neuromorphic-engine/cuda"]
simulation = ["neuromorphic-engine/simulation"]
