[package]
name = "csf-mlir"
version = "0.1.0"
edition = "2021"
authors = ["PRISM-AI Team"]
description = "CSF-MLIR: Multi-Level IR compiler for quantum and neural computations"

[dependencies]
# Core dependencies
mlir-sys = "0.2"
llvm-sys = "170"
inkwell = { version = "0.4", features = ["llvm17-0"] }

# GPU backends
cudarc = { version = "0.17", features = ["driver", "nvrtc", "cublas"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
default = ["cuda"]
cuda = []
vulkan = []
hip = []