[package]
name = "csf-quantum"
version = "0.1.0"
edition = "2021"
authors = ["PRISM-AI Team"]
description = "CSF-Quantum: High-level quantum computing simulation library powered by csf-mlir"

[dependencies]
# Core dependencies
csf-mlir = { path = "../csf-mlir" }
shared-types = { path = "../shared-types" }

# Math and complex numbers
num-complex = "0.4"
ndarray = "0.15"
nalgebra = "0.33"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
double-double = []